--- a/nginx.json
+++ b/nginx.json
@@ -1628,7 +1628,7 @@
   ],
   "schemaVersion": 14,
   "style": "dark",
-  "tags": [],
+  "tags": ["fcio"],
   "templating": {
     "list": [
       {
