set uids for identification (for Grafana 5)

--- a/nginx.json
+++ b/nginx.json
@@ -6,6 +6,7 @@
   "gnetId": null,
   "graphTooltip": 1,
   "hideControls": false,
+  "uid": "fcionginx",
   "id": 3,
   "links": [],
   "refresh": "10s",
